tests/baselines/reference/for-inStatementsDestructuring2.errors.txt
for-inStatementsDestructuring2.ts(1,11): error TS2339: Property 'a' does not exist on type 'String'.
for-inStatementsDestructuring2.ts(1,14): error TS2339: Property 'b' does not exist on type 'String'.


==== for-inStatementsDestructuring2.ts (2 errors) ====
    for (var {a, b} in []) {}
              ~
!!! error TS2339: Property 'a' does not exist on type 'String'.
                 ~
!!! error TS2339: Property 'b' does not exist on type 'String'.